--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,18 @@ input::-moz-placeholder {
     color: #919191;
 }
 
+select {
+	padding: 0;
+  	margin: 0;
+  	border: none;
+  	border-radius: 0;
+  	box-shadow: none;
+  	background-color: transparent;
+  	font: inherit;
+  	color: inherit;
+  	letter-spacing: inherit;
+}
+
 option {
     color: black
 }
