--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,21 @@
     color: #FFFFFF;
 }
 
+.header__docs {
+    position: absolute;
+    margin-left: 91%;
+    margin-top: 3%;
+    
+    text-decoration: none;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 100%;
+
+    color: #1B69B6;
+}
+
 .send-form {
     display: flex;
     flex-direction: column;
