--- a/src/App.css
+++ b/src/App.css
@@ -123,10 +123,7 @@
     padding: 3.6%;
 
     color: #919191;
-}
-
-.active {
-    color: black;
+    background-color: #F7F8FA;
 }
 
 .date-time__item{    
@@ -143,6 +140,9 @@
     padding-bottom: 0.9%;
     padding-left: 1.4%;
     margin-right: 3px;
+
+    color: #919191;
+    background-color: #F7F8FA;
 }
 
 .date-time{
@@ -163,6 +163,9 @@
     font-weight: normal;
     font-size: 100%;
     padding: 3.6%;
+
+    color: #919191;
+    background-color: #F7F8FA;
 }
 
 .form-item__closed-input {
@@ -177,6 +180,9 @@
     font-weight: normal;
     font-size: 100%;
     padding: 3.6%;
+
+    color: #919191;
+    background-color: #F7F8FA;
 }
 
 .form-item__milestone-input {
@@ -191,6 +197,9 @@
     font-weight: normal;
     font-size: 100%;
     padding: 3.6%;
+
+    color: #919191;
+    background-color: #F7F8FA;
 }
 
 .get-request {
